--- a/templates/home/base2.html
+++ b/templates/home/base2.html
@@ -19,12 +19,15 @@
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 
+    {% block head %}
+    {% endblock %}
+
 </head>
 <body>
-    <header class="s-header">
+    <header class="s-header" style="background-color: rgba(0, 0, 0, .9);">
 
         <div class="header-logo">
-            <a class="site-logo" href="{% url 'home' %}">
+            <a class="site-logo" href="{% url 'start' %}">
                 <img src="{% static 'images/logo.png' %}" alt="Homepage">
             </a>
         </div>
@@ -37,12 +40,16 @@
                 <h3>Navigation</h3>
 
                 <ul class="header-nav__list">
-                    <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
-                    <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-                    <li><a class="smoothscroll"  href="#services" title="services">Services</a></li>
-                    <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
-                    <li><a class="smoothscroll"  href="#clients" title="clients">Clients</a></li>
-                    <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
+                    <li class="current"><a class="smoothscroll"  href="{% url 'home' %}" title="home">Home</a></li>
+                    <li class="current"><a class="smoothscroll"  href="#Grades" title="home">Grades</a></li>
+                    <li class="current"><a class="smoothscroll"  href="#Classes" title="home">Classes</a></li>
+                    <li class="current"><a class="smoothscroll"  href="#Report" title="home">Report Card</a></li>
+                    <li class="current"><a class="smoothscroll"  href="#Info" title="home">Student Info</a></li>
+{#                    <li><a class="smoothscroll"  href="#about" title="about">About</a></li>#}
+{#                    <li><a class="smoothscroll"  href="#services" title="services">Services</a></li>#}
+{#                    <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>#}
+{#                    <li><a class="smoothscroll"  href="#clients" title="clients">Clients</a></li>#}
+{#                    <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>#}
                     <hr>
                     {% if not user.is_authenticated %}
                     <li><a class=""  href="{% url 'login' %}" title="login">Login</a></li>
@@ -57,8 +64,8 @@
 
         </nav>
 
-        <a class="header-menu-toggle" href="#0">
-            <span class="header-menu-text">Menu</span>
+        <a class="header-menu-toggle" href="#0" style="background-color: rgba(0, 0, 0);">
+            <span class="header-menu">Menu</span>
             <span class="header-menu-icon"></span>
         </a>
     </header>
@@ -70,10 +77,15 @@
 
         <div class="row footer-main">
 
-            <div class="tab-full  footer-desc">
+            <div class="col-six tab-full left footer-desc">
 
-                <h4><div class="footer-logo"></div></h4>
-                Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt. Quaerat voluptas autem necessitatibus vitae aut.
+                <h4><div class="footer-gin-logo"></div></h4>
+
+            </div>
+
+            <div class="col-six tab-full right footer-subscribe">
+
+                <h4><div class="footer-unox-logo"></div></h4>
 
             </div>
 
