--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'start/base1.html' %}
 {% load static %}
 
 {% block title %}Login{% endblock %}
@@ -19,11 +19,11 @@
 
             <div class="contact-primary">
 
-                <br><br><br><br><br>
+                <br><br><br><br>
 
                 <h3 class="h6">Login to Access Gen.</h3>
 
-                <form name="contactForm" id="contactForm" method="post" action="" novalidate="novalidate">
+                <form method="post" novalidate="novalidate">
                     <fieldset>
                     {% csrf_token %}
 
@@ -35,14 +35,6 @@
                     </div>
                     <div class="form-field">
                         <button class="full-width btn--primary">Login</button>
-                        <div class="submit-loader">
-                            <div class="text-loader">Sending...</div>
-                            <div class="s-loader">
-                                <div class="bounce1"></div>
-                                <div class="bounce2"></div>
-                                <div class="bounce3"></div>
-                            </div>
-                        </div>
                     </div>
                     </fieldset>
                 </form>
@@ -76,23 +68,23 @@
                             Fax: (+63) 555 0101
                         </p>
                     </div>
-                    <ul class="contact-social">
-                        <li>
-                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-                        </li>
-                    </ul> <!-- end contact-social -->
+{#                    <ul class="contact-social">#}
+{#                        <li>#}
+{#                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>#}
+{#                        </li>#}
+{#                        <li>#}
+{#                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>#}
+{#                        </li>#}
+{#                        <li>#}
+{#                            <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>#}
+{#                        </li>#}
+{#                        <li>#}
+{#                            <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>#}
+{#                        </li>#}
+{#                        <li>#}
+{#                            <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>#}
+{#                        </li>#}
+{#                    </ul> <!-- end contact-social -->#}
                 </div> <!-- end contact-info -->
             </div> <!-- end contact-secondary -->
 
