fix: Removed method view and added template view

--- a/templates/start/start.html
+++ b/templates/start/start.html
@@ -28,7 +28,7 @@
                         Login
                     </a>
                     {% else %}
-                    <a href="{% url 'login' %}" class="smoothscroll btn btn--stroke">
+                    <a href="{% url 'home' %}" class="btn btn--stroke">
                         Continue
                     </a>
                     {% endif %}
