--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -47,16 +47,16 @@
                     <h3 class="h6 hide-on-fullwidth">Don't Have an Account?</h3>
 
                     <div class="cinfo">
-                        <h5>Students</h5>
+                        <h5>Students and Staff</h5>
                         <p>
-                            Ask your teacher or school to create an account for you!
+                            <a href="#register" style="color: #39b54a">Register</a> using your school code, so you can access your classes and grades!
                         </p>
                     </div>
 
                     <div class="cinfo">
                         <h5>Schools</h5>
                         <p>
-                            To create staff accounts, contact us at <a href="mailto:gen-contact@gmail.com">gen-contact@gmail.com</a> and we will get you set up ASAP
+                            To create a school and obtain a code, contact us at <a href="mailto:contact@gen.com">contact@gen.com</a>!
                         </p>
                     </div>
 
