--- a/templates/start/start.html
+++ b/templates/start/start.html
@@ -46,7 +46,7 @@
 
         </div>
 
-{#        <ul class="home-social">#}
+{#        <ul class="student-social">#}
 {#            <li>#}
 {#                <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>#}
 {#            </li>#}
