--- a/templates/superuser/manage_schools.html
+++ b/templates/superuser/manage_schools.html
@@ -1,7 +1,7 @@
-{% extends "home/base2.html" %}
+{% extends "student/base2.html" %}
 {% load static %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Manage Schools{% endblock %}
 
 {% block head %}
 <script src="https://kit.fontawesome.com/41130295ba.js" crossorigin="anonymous"></script>
